--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,6 @@ env:
   variables:
     LAMBDA_FUNCTION_NAME: "job_campaign_worker"
     AWS_DEFAULT_REGION: "ap-southeast-2"
-    S3_BUCKET_NAME: "triggerlambda031225"
 
 phases:
   install:
@@ -19,21 +18,15 @@ phases:
       - echo "Cleaning old package..."
       - rm -f function.zip
 
-      - echo "Creating deployment package..."
+      - echo "Creating deployment package from root..."
       - zip -r function.zip index.js package.json package-lock.json node_modules
 
       - echo "Verify zip contents..."
       - unzip -l function.zip
 
-      - echo "Checking package size..."
-      - ls -lh function.zip
-
   post_build:
     commands:
-      - echo "Uploading package to S3..."
-      - aws s3 cp function.zip s3://$S3_BUCKET_NAME/lambda/$LAMBDA_FUNCTION_NAME/function.zip
-
-      - echo "Updating Lambda from S3..."
-      - aws lambda update-function-code --function-name "$LAMBDA_FUNCTION_NAME" --s3-bucket "$S3_BUCKET_NAME" --s3-key lambda/$LAMBDA_FUNCTION_NAME/function.zip --publish
+      - echo "Updating Lambda directly (no S3)..."
+      - aws lambda update-function-code --function-name "$LAMBDA_FUNCTION_NAME" --zip-file fileb://function.zip --publish
 
       - echo "Deployment completed successfully!"
